--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "bcrypt": "^6.0.0",
+    "iron-session": "^8.0.4",
     "next": "^16.0.10",
+    "pg": "^8.16.3",
+    "prisma": "^7.2.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
-    "sass": "^1.94.0"
+    "resend": "^6.6.0",
+    "sass": "^1.94.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "typescript": "^5"
