--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^7.2.0",
     "@supabase/supabase-js": "^2.89.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "iron-session": "^8.0.4",
     "next": "^16.0.10",
     "pg": "^8.16.3",
