--- a/package.json
+++ b/package.json
@@ -12,20 +12,37 @@
     "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "6.16.2",
     "@supabase/supabase-js": "^2.89.0",
+    "@tiptap/extension-code-block-lowlight": "^3.14.0",
+    "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-heading": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-table": "^3.14.0",
+    "@tiptap/extension-table-cell": "^3.14.0",
+    "@tiptap/extension-table-header": "^3.14.0",
+    "@tiptap/extension-table-row": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/extension-underline": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "iron-session": "^8.0.4",
+    "lowlight": "^3.3.0",
     "next": "^16.0.10",
     "pg": "^8.16.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "resend": "^6.6.0",
+    "sanitize-html": "^2.17.0",
     "sass": "^1.94.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
-    "prisma": "6.16.2",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
@@ -34,6 +51,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "prisma": "6.16.2",
     "typescript": "^5"
   }
 }
