--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^16.0.10",
     "next-i18next": "^15.4.3",
     "next-intl": "^4.7.0",
+    "next-sitemap": "^4.2.3",
     "pg": "^8.16.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
