chore: add lucide react for editor icons
feat(editor): add align, tables, and code highlight toolbar actions

style(editor): add base styles for rich editor toolbar and content

 Changes to be committed:
	modified:   .gitignore
	modified:   package-lock.json
	modified:   package.json
	modified:   src/components/editor/RichTextEditor.tsx
	modified:   src/components/editor/RichTextRenderer.tsx
	new file:   src/styles/components/_editor.scss
	modified:   src/styles/globals.scss

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i18next-http-backend": "^3.0.2",
     "iron-session": "^8.0.4",
     "lowlight": "^3.3.0",
+    "lucide-react": "^0.562.0",
     "next": "^16.0.10",
     "next-i18next": "^15.4.3",
     "next-intl": "^4.7.0",
