--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
     "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "6.16.2",
     "@supabase/supabase-js": "^2.89.0",
-    "@tiptap/extension-code-block-lowlight": "^3.14.0",
+    "@tiptap/core": "^3.15.3",
+    "@tiptap/extension-code-block-lowlight": "^3.15.3",
     "@tiptap/extension-color": "^3.14.0",
     "@tiptap/extension-heading": "^3.14.0",
-    "@tiptap/extension-image": "^3.14.0",
-    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-image": "^3.15.3",
+    "@tiptap/extension-link": "^3.15.3",
     "@tiptap/extension-placeholder": "^3.14.0",
-    "@tiptap/extension-table": "^3.14.0",
-    "@tiptap/extension-table-cell": "^3.14.0",
-    "@tiptap/extension-table-header": "^3.14.0",
-    "@tiptap/extension-table-row": "^3.14.0",
-    "@tiptap/extension-text-align": "^3.14.0",
+    "@tiptap/extension-table": "^3.15.3",
+    "@tiptap/extension-table-cell": "^3.15.3",
+    "@tiptap/extension-table-header": "^3.15.3",
+    "@tiptap/extension-table-row": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
     "@tiptap/extension-text-style": "^3.14.0",
-    "@tiptap/extension-underline": "^3.14.0",
+    "@tiptap/extension-underline": "^3.15.3",
     "@tiptap/pm": "^3.14.0",
-    "@tiptap/react": "^3.14.0",
-    "@tiptap/starter-kit": "^3.14.0",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
